--- a/lib/Manuel/CMakeLists.txt
+++ b/lib/Manuel/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.25)
 project(Manuel CXX)
 
 # Dependencies
@@ -7,29 +7,17 @@ find_package(fmt REQUIRED)
 # Declaration
 add_library(Manuel SHARED)
 
-message("pulic folder ${CMAKE_CURRENT_BINARY_DIR}")
-
 # Definition
 add_subdirectory(src)
 
-generate_export_header(Manuel EXPORT_MACRO_NAME MANUEL_EXPORT EXPORT_FILE_NAME ${CMAKE_CURRENT_BINARY_DIR}/Public/Manuel/Export.h)
+generate_export_header(Manuel EXPORT_MACRO_NAME MANUEL_EXPORT EXPORT_FILE_NAME ${CMAKE_CURRENT_BINARY_DIR}/Public/Manuel/Export.hpp)
 
 target_include_directories(Manuel PUBLIC include ${CMAKE_CURRENT_BINARY_DIR}/Public)
 
 target_link_libraries(Manuel PUBLIC fmt::fmt)
 
-if(UNIX)
-    target_compile_options(Manuel PRIVATE -fPIC)
-    target_link_libraries(Manuel PUBLIC dl pthread)
-endif()
+target_compile_options(Manuel PRIVATE -fno-exceptions)
 
-if(MSVC)
-    target_compile_options(Manuel PRIVATE /EHsc)
-else()
-    target_compile_options(Manuel PRIVATE -fno-exceptions)
-endif()
-
-# Auxiliary Targets
-if(BUILD_TESTS)
+if(BUILD_TEST)
     add_subdirectory(test)
 endif()
