--- a/lib/Manuel/src/CMakeLists.txt
+++ b/lib/Manuel/src/CMakeLists.txt
@@ -1,4 +1,8 @@
 target_sources(
     Manuel
     PRIVATE Log.cpp
+            Logger.cpp
+            ManagedMemory.cpp
+            ManagedMemory_subset.cpp
+            Result.cpp
 )
